--- a/Posttest_KB_7/Posttest_7.ipynb
+++ b/Posttest_KB_7/Posttest_7.ipynb
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "e7684825",
    "metadata": {},
    "outputs": [
@@ -343,8 +343,7 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
+    "#Random_tensor\n",
     "sorted_r1 = tf.sort(random_tensor, direction=\"DESCENDING\")\n",
     "print(\"Hasil Sorting Desc:\",sorted_r1.numpy())\n",
     "sorted_r2 = tf.argsort(random_tensor,direction=\"DESCENDING\")\n",
@@ -353,8 +352,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "6b4dc0f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil Sorting Desc: [[11.  7.  5.  3.  2.]\n",
+      " [29. 23. 19. 17. 13.]\n",
+      " [47. 43. 41. 37. 31.]\n",
+      " [71. 67. 61. 59. 53.]\n",
+      " [97. 89. 83. 79. 73.]]\n",
+      "Indexes dari Element Sorting Desc: [[4 3 2 1 0]\n",
+      " [4 3 2 1 0]\n",
+      " [4 3 2 1 0]\n",
+      " [4 3 2 1 0]\n",
+      " [4 3 2 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Prime_tensor\n",
+    "\n",
+    "sorted_p1 = tf.sort(prime_tensor, direction=\"DESCENDING\")\n",
+    "print(\"Hasil Sorting Desc:\",sorted_p1.numpy())\n",
+    "sorted_p2 = tf.argsort(prime_tensor,direction=\"DESCENDING\")\n",
+    "print(\"Indexes dari Element Sorting Desc:\",sorted_p2.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b25e728a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[-8.1131822e-01  1.4845988e+00  6.5329373e-02 -2.4427042e+00\n",
+      "   9.9248402e-02]\n",
+      " [ 5.9122431e-01  5.9282297e-01 -2.1229296e+00 -7.2289723e-01\n",
+      "  -5.6270380e-02]\n",
+      " [ 6.4354479e-01 -2.6432407e-01  1.8566332e+00  5.6784171e-01\n",
+      "  -3.8283589e-01]\n",
+      " [-1.4853433e+00  1.2617711e+00 -2.5306080e-02 -2.6462969e-01\n",
+      "   1.5328138e+00]\n",
+      " [-1.7429771e+00 -4.3789294e-01 -5.6601000e-01  3.2066926e-01\n",
+      "   1.1328310e+00]\n",
+      " [ 2.0000000e+00  3.0000000e+00  5.0000000e+00  7.0000000e+00\n",
+      "   1.1000000e+01]\n",
+      " [ 1.3000000e+01  1.7000000e+01  1.9000000e+01  2.3000000e+01\n",
+      "   2.9000000e+01]\n",
+      " [ 3.1000000e+01  3.7000000e+01  4.1000000e+01  4.3000000e+01\n",
+      "   4.7000000e+01]\n",
+      " [ 5.3000000e+01  5.9000000e+01  6.1000000e+01  6.7000000e+01\n",
+      "   7.1000000e+01]\n",
+      " [ 7.3000000e+01  7.9000000e+01  8.3000000e+01  8.9000000e+01\n",
+      "   9.7000000e+01]], shape=(10, 5), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tensor Gabungan\n",
+    "\n",
+    "print(concated_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c0712529",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hasil Sorting Descensing: [[ 1.4845988e+00  9.9248402e-02  6.5329373e-02 -8.1131822e-01\n",
+      "  -2.4427042e+00]\n",
+      " [ 5.9282297e-01  5.9122431e-01 -5.6270380e-02 -7.2289723e-01\n",
+      "  -2.1229296e+00]\n",
+      " [ 1.8566332e+00  6.4354479e-01  5.6784171e-01 -2.6432407e-01\n",
+      "  -3.8283589e-01]\n",
+      " [ 1.5328138e+00  1.2617711e+00 -2.5306080e-02 -2.6462969e-01\n",
+      "  -1.4853433e+00]\n",
+      " [ 1.1328310e+00  3.2066926e-01 -4.3789294e-01 -5.6601000e-01\n",
+      "  -1.7429771e+00]\n",
+      " [ 1.1000000e+01  7.0000000e+00  5.0000000e+00  3.0000000e+00\n",
+      "   2.0000000e+00]\n",
+      " [ 2.9000000e+01  2.3000000e+01  1.9000000e+01  1.7000000e+01\n",
+      "   1.3000000e+01]\n",
+      " [ 4.7000000e+01  4.3000000e+01  4.1000000e+01  3.7000000e+01\n",
+      "   3.1000000e+01]\n",
+      " [ 7.1000000e+01  6.7000000e+01  6.1000000e+01  5.9000000e+01\n",
+      "   5.3000000e+01]\n",
+      " [ 9.7000000e+01  8.9000000e+01  8.3000000e+01  7.9000000e+01\n",
+      "   7.3000000e+01]]\n",
+      "Indexes dari Element Sorting Descending: [[1 4 2 0 3]\n",
+      " [1 0 4 3 2]\n",
+      " [2 0 3 1 4]\n",
+      " [4 1 2 3 0]\n",
+      " [4 3 1 2 0]\n",
+      " [4 3 2 1 0]\n",
+      " [4 3 2 1 0]\n",
+      " [4 3 2 1 0]\n",
+      " [4 3 2 1 0]\n",
+      " [4 3 2 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sorted_c1 = tf.sort(concated_tensor, direction=\"DESCENDING\")\n",
+    "print(\"Hasil Sorting Descensing:\",sorted_c1.numpy())\n",
+    "sorted_c2 = tf.argsort(concated_tensor,direction=\"DESCENDING\")\n",
+    "print(\"Indexes dari Element Sorting Descending:\",sorted_c2.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37a06e14",
    "metadata": {},
    "outputs": [],
    "source": []
